--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,3 @@
-@import "./colors";
-
 * {
   margin: 0;
   padding: 0;
@@ -8,7 +6,5 @@
 }
 
 html {
-  font-size: 10px;
-  font-family: Arial sans-serif;
-  background: $background;
+  overflow: hidden;
 }
