--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Tektur:wght@400;700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +9,7 @@
 
 html {
   overflow: hidden;
-  font-family: Arial, "sans-serif";
+  font-family: 'Tektur', cursive;
 }
 
 #statistic {
