--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,7 +14,7 @@ html {
 #statistic {
   position: absolute;
   left: 16px;
-  top: 16px;
+  top: 86px;
   padding: 16px;
   z-index: 2;
   background: #f1f1f1;
@@ -30,7 +30,7 @@ html {
 
 label {
   position: absolute;
-  right: 16px;
+  left: 16px;
   top: 16px;
   padding: 16px;
   z-index: 2;
